tests/expectations/parser/expression/array_init_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test:1:2
     |
   1 | [...0u8; 1]
     |  ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test:1:2
     |
   1 | [...0; 1]
     |  ^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 0.
    --> test:1:2
     |
   1 | [0; ()]
     |  ^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 0.
    --> test:1:2
     |
   1 | [0; (1)]
     |  ^""",
]
